support_tools/swigwin-3.0.12/Examples/test-suite/errors/pp_missing_endif.i
%module xxx

#ifdef FOO
int x;


